# AMD-RDNA3

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml
include/AMD-RDNA3.5/instructions/: SOP2.h
include/AMD-RDNA3/instructions/: SMEM.h  SOP1.h  SOP2.h  SOPC.h  SOPK.h  SOPP.h  VOP2.h
src/Instructions/: SOP2.c
src/instructions/: SMEM.c  SOP1.c  SOP2.c  SOPC.c  SOPK.c  SOPP.c  VOP2.c
src/test/: SOP2-test.cpp
